--- a/docs/architecture/角色子类适配指南.md
+++ b/docs/architecture/角色子类适配指南.md
@@ -1,59 +1,57 @@
 # 架构设计：角色子类适配指南 (新架构 V2)
 
 ## 1. 概述
-随着 `Character` 基类接入 `CombatEntity` 体系并引入“组件化组装”模型，所有具体的角色子类（如香菱、夜兰等）必须按照本指南进行适配重构，以确保能够在新版场景引擎中正常运行。
+本指南确立了具体的角色子类（如香菱、夜兰等）在新版场景引擎下的模块化重构规范。
 
-## 2. 核心重构契约
-子类必须实现以下两个核心钩子方法，严禁在 `__init__` 中直接实例化业务组件。
+## 2. 目录结构规范 (Modular Structure)
+为了提高大型角色的可维护性，必须采用以下文件布局：
 
-### 2.1 `_setup_character_components()`
+```text
+character/REGION/xiangling/
+├── __init__.py    # 导出核心角色类
+├── char.py        # 核心组装类 (继承 Character)
+├── entities.py    # 战场物理实体 (锅巴、旋火轮、岩柱)
+├── effects.py     # 角色特有逻辑效果 (Buff、印记、状态)
+├── skills.py      # 技能逻辑 (Normal, Skill, Burst)
+└── talents.py     # 固有天赋与命座定义
+```
+
+## 3. 模块职责划分
+
+### 3.1 `entities.py` vs `effects.py`
+- **Entity**：继承自 `CombatEntity`。具有 3D 位置、体积（Hitbox）和阵营。
+    - *例子*：锅巴、草原核。
+- **Effect**：继承自项目标准的 `Effect` 基类。通常挂载在角色的 `active_effects` 列表中，不具有空间位置。
+    - *例子*：绝云朝天椒的加攻 Buff、胡桃的彼岸蝶。
+
+## 4. 核心重构契约 (Hooks)
+
+### 4.1 `_setup_character_components()`
 **职责**：实例化技能对象与能量系统。
-**规范**：
-- 必须将技能实例存入 `self.skills` 字典。
-- 必须初始化 `self.elemental_energy`。
-
 ```python
 def _setup_character_components(self):
-    # 1. 能量系统
     self.elemental_energy = ElementalEnergy(self, ('火', 80))
-    # 2. 技能组注册
     self.skills = {
-        "normal": NormalAttackSkill(self.skill_params[0]),
+        "normal": NormalAttack(self.skill_params[0]),
         "skill": ElementalSkill(self.skill_params[1]),
         "burst": ElementalBurst(self.skill_params[2], self)
     }
 ```
 
-### 2.2 `_setup_effects()`
-**职责**：实例化角色的固有天赋与命座效果。
-**规范**：
-- 固有天赋存入 `self.talents` 列表（顺序对应天赋1、天赋2等）。
-- 命座存入 `self.constellations` 槽位（Index 0-5 对应 1-6命）。
-
+### 4.2 `_setup_effects()`
+**职责**：填充天赋与命座槽位。
 ```python
 def _setup_effects(self):
-    # 填充天赋
-    self.talents = [
-        CrossfireEffect(), # 固有1
-        ChiliPepperEffect() # 固有2
-    ]
-    # 填充命座槽位
-    self.constellations[2] = ConstellationEffect_3() # 3命
+    self.talents = [Talent1(), Talent2()]
+    self.constellations = [C1(), C2(), C3(), C4(), C5(), C6()]
 ```
 
-## 3. 方法命名变更 (Breaking Changes)
-- **驱动接口**：所有 `update()` 方法统一重命名为 **`on_frame_update()`**。
-- **反射废弃**：严禁直接使用 `self.NormalAttack` 或 `self.Skill`。系统现在通过 `self.skills["skill"]` 访问组件。
-
-## 4. 属性计算注意事项
-- **不要手动修改 attribute_panel**：数值加成应通过实现 `TalentEffect` 的 `apply` 逻辑或动态 Effect 挂载来完成。
-- **白值处理**：攻击力白值会自动在 `initialize_gear()` 阶段合并武器数值，无需子类干预。
-
-## 5. 适配 checklist
-- [ ] 子类继承关系是否正确。
-- [ ] 是否移除了旧的 `_init_character` 方法并迁移至新钩子。
+## 5. 关键接口规范
+- **方法命名**：统一使用 **`on_frame_update()`** 作为帧驱动接口。
+- **属性访问**：统一通过 **`self.skills["key"]`** 访问技能组件。
+- **实体注册**：所有生成的 Entity 必须通过 **`ctx.space.register(entity)`** 进入场景。
 
 ---
-*状态: 现行规范*
+*状态: 现行规范 V2.1*
 *Author: Gemini CLI Agent*
 *Date: 2026-02-07*
