feat: 实现参数化技能触发规范与全系统驱动接口重命名，完善角色 V2 适配指南 #27

--- a/docs/architecture/角色子类适配指南.md
+++ b/docs/architecture/角色子类适配指南.md
@@ -4,7 +4,7 @@
 本指南确立了具体的角色子类（如香菱、夜兰等）在新版场景引擎下的模块化重构规范。
 
 ## 2. 目录结构规范 (Modular Structure)
-为了提高大型角色的可维护性，必须采用以下文件布局：
+必须采用以下文件布局以确保逻辑解耦：
 
 ```text
 character/REGION/xiangling/
@@ -16,13 +16,28 @@ character/REGION/xiangling/
 └── talents.py     # 固有天赋与命座定义
 ```
 
-## 3. 模块职责划分
+## 3. 复杂技能触发规范 (Parameterized Skills) [NEW]
+为了支持“长按 (Hold)”、“多段 (Multi-stage)”等复杂触发逻辑，系统采用 **“参数化路由”** 模式。
 
-### 3.1 `entities.py` vs `effects.py`
-- **Entity**：继承自 `CombatEntity`。具有 3D 位置、体积（Hitbox）和阵营。
-    - *例子*：锅巴、草原核。
-- **Effect**：继承自项目标准的 `Effect` 基类。通常挂载在角色的 `active_effects` 列表中，不具有空间位置。
-    - *例子*：绝云朝天椒的加攻 Buff、胡桃的彼岸蝶。
+### 3.1 逻辑流转
+1. **角色接口层**：调用 `char.elemental_skill("长按")`。
+2. **基类透传层**：`Character._get_action_data` 接收该参数。
+3. **技能工厂层**：调用技能对象的 `to_action_data(params="长按")`。
+4. **动作生成层**：技能对象根据参数返回具有不同帧数和判定点的 `ActionFrameData`。
+
+### 3.2 技能实现示例 (`skills.py`)
+```python
+class ElementalSkill(SkillBase):
+    def to_action_data(self, params: Any = None) -> ActionFrameData:
+        if params == "长按":
+            data = ActionFrameData(name="E_HOLD", total_frames=132, hit_frames=[111])
+        else:
+            data = ActionFrameData(name="E_PRESS", total_frames=42, hit_frames=[31])
+        
+        # 必须挂载运行时对象以维持回调
+        setattr(data, "runtime_skill_obj", self)
+        return data
+```
 
 ## 4. 核心重构契约 (Hooks)
 
@@ -52,6 +67,6 @@ def _setup_effects(self):
 - **实体注册**：所有生成的 Entity 必须通过 **`ctx.space.register(entity)`** 进入场景。
 
 ---
-*状态: 现行规范 V2.1*
+*状态: 现行规范 V2.2*
 *Author: Gemini CLI Agent*
 *Date: 2026-02-07*
