--- a/docs/architecture/数据契约与攻击定义.md
+++ b/docs/architecture/数据契约与攻击定义.md
@@ -1,29 +1,39 @@
-# 架构设计：数据契约与攻击定义
+# 架构设计：数据契约与攻击定义 (V2)
 
-## 1. 攻击配置 DTO (AttackConfig)
-所有攻击行为（普攻、技能、反应）在发起时都必须携带一份完整的配置快照。该配置直接决定了物理层、元素层和数值层的表现。
+## 1. 核心契约：AttackConfig
+`AttackConfig` 是所有攻击行为的“基因”，它定义了攻击的本质属性，这些属性在技能施放时即已确定，不随角色的实时面板波动。
 
-### 1.1 核心参数映射
-| 字段 | 对应逻辑模块 | 说明 |
+### 1.1 字段规范
+| 字段 | 类型 | 说明 |
 | :--- | :--- | :--- |
-| **元素类型 / 元素量** | 元素附着系统 | 决定反应类型与初始 GU 值 |
-| **衰减序列 / 衰减标签** | ICD 控制器 | 决定是否触发元素附着计数器 |
-| **AOE形状 / 偏移 / 索敌** | 空间碰撞系统 | 决定伤害影响的几何区域 |
-| **Deployable?** | 实体管理系统 | 决定是否在场景中生成部署物 (如草原核) |
-| **攻击标签 / 打击类型** | 伤害流水线 | 影响伤害加成判定 (如普通攻击、钝击等) |
-| **远近类型** | 属性计算层 | 影响特定被动效果的加成判定 |
+| `element_u` | float | 初始元素附着量 (通常为 1.0, 2.0, 4.0) |
+| `icd_tag` | str | 用于 ICD 计数器分组的标签 (如 "NormalAttack", "XianglingBurst") |
+| `strike_type` | Enum | 打击类型 (DEFAULT, BLUNT, SLASH, PIERCE) |
+| `is_deployable` | bool | 逻辑位，决定是否能触发“生成部署物”逻辑 (如绽放产生草原核) |
+| `is_ranged` | bool | 判定是否为远程攻击，影响特定加成 |
+| `hitbox` | HitboxConfig | 物理参数，决定 AOE 形状和碰撞范围 |
 
-## 2. 数据流转路径
-1. **角色逻辑层**：根据当前技能状态，从数据表中提取对应的 `AttackConfig`。
-2. **伤害工厂 (DamageFactory)**：将 `AttackConfig` 与角色实时属性（攻击力、精通）结合，生成 `Damage` 对象。
-3. **场景广播 (Broadcast)**：`Damage` 对象被提交给 `CombatSpace`，其携带的 AOE 参数用于筛选实体。
-4. **实体反馈 (Feedback)**：被命中的实体解析 `AttackConfig` 中的附着标签，更新自身元素状态。
+## 2. 物理契约：HitboxConfig
+描述攻击在 `CombatSpace` 中的覆盖范围。
 
-## 3. 动态属性扩展
-除了静态数据，该契约还需支持动态计算：
-- **选择方式**：决定在多个目标中优先攻击谁（如血量最低、距离最近）。
-- **实时位置**：在广播阶段，根据实体当前坐标动态判定是否处于 AOE 几何体内。
+```python
+@dataclass
+class HitboxConfig:
+    shape: AOEShape  # CIRCLE, SECTOR, RECT
+    radius: float    # 半径/长度
+    angle: float     # 扇形角度
+    offset: tuple    # 相对偏移 (X, Y, Z)
+```
+
+## 3. 数据流转路径
+1. **技能工厂 (`skills.py`)**：实例化 `AttackConfig` 并挂载到 `ActionFrameData`。
+2. **动作执行 (`ActionManager`)**：当到达判定帧时，提取配置并创建 `Damage` 对象。
+3. **空间广播 (`CombatSpace`)**：读取 `damage.config.hitbox` 进行空间检索。
+4. **结算流水线 (`DamagePipeline`)**：
+   - 根据 `icd_tag` 判定是否进行附着。
+   - 根据 `is_deployable` 判定是否触发后续生成逻辑。
 
 ---
-*状态: 草案*
-*关联 Issue: #26*
+*状态: 现行规范*
+*Author: Gemini CLI Agent*
+*Date: 2026-02-07*
