feat: 精确化 AOEShape 与 StrikeType 枚举定义，并同步更新香菱技能契约 #26

--- a/docs/architecture/数据契约与攻击定义.md
+++ b/docs/architecture/数据契约与攻击定义.md
@@ -1,37 +1,40 @@
-# 架构设计：数据契约与攻击定义 (V2)
+# 架构设计：数据契约与攻击定义 (V2.1)
 
 ## 1. 核心契约：AttackConfig
-`AttackConfig` 是所有攻击行为的“基因”，它定义了攻击的本质属性，这些属性在技能施放时即已确定，不随角色的实时面板波动。
+`AttackConfig` 定义了攻击的本质属性。
 
 ### 1.1 字段规范
 | 字段 | 类型 | 说明 |
 | :--- | :--- | :--- |
-| `element_u` | float | 初始元素附着量 (通常为 1.0, 2.0, 4.0) |
-| `icd_tag` | str | 用于 ICD 计数器分组的标签 (如 "NormalAttack", "XianglingBurst") |
-| `strike_type` | Enum | 打击类型 (DEFAULT, BLUNT, SLASH, PIERCE) |
-| `is_deployable` | bool | 逻辑位，决定是否能触发“生成部署物”逻辑 (如绽放产生草原核) |
-| `is_ranged` | bool | 判定是否为远程攻击，影响特定加成 |
+| `element_u` | float | 初始元素附着量 |
+| `icd_tag` | str | 用于 ICD 计数器分组的标签 |
+| **`strike_type`** | **Enum** | **打击类型 (DEFAULT, PIERCE, BLUNT, THRUST, SLASH)** |
+| `is_deployable` | bool | 决定是否能触发“生成部署物”逻辑 |
+| `is_ranged` | bool | 判定是否为远程攻击 |
 | `hitbox` | HitboxConfig | 物理参数，决定 AOE 形状和碰撞范围 |
 
 ## 2. 物理契约：HitboxConfig
 描述攻击在 `CombatSpace` 中的覆盖范围。
 
+### 2.1 形状定义 (`AOEShape`)
+1. **SINGLE (单体)**：直接作用于锁定目标。
+2. **SPHERE (球体)**：以坐标为中心，具有指定半径。
+3. **CYLINDER (圆柱体)**：XZ轴圆判定，Y轴高度判定。
+4. **BOX (长方体)**：定义 X, Y, Z 三轴长度。
+
 ```python
 @dataclass
 class HitboxConfig:
-    shape: AOEShape  # CIRCLE, SECTOR, RECT
-    radius: float    # 半径/长度
-    angle: float     # 扇形角度
+    shape: AOEShape
+    radius: float    # 半径 (SPHERE/CYLINDER)
+    height: float    # 高度 (CYLINDER/BOX)
+    width: float     # 宽度 (BOX)
+    length: float    # 长度 (BOX)
     offset: tuple    # 相对偏移 (X, Y, Z)
 ```
 
-## 3. 数据流转路径
-1. **技能工厂 (`skills.py`)**：实例化 `AttackConfig` 并挂载到 `ActionFrameData`。
-2. **动作执行 (`ActionManager`)**：当到达判定帧时，提取配置并创建 `Damage` 对象。
-3. **空间广播 (`CombatSpace`)**：读取 `damage.config.hitbox` 进行空间检索。
-4. **结算流水线 (`DamagePipeline`)**：
-   - 根据 `icd_tag` 判定是否进行附着。
-   - 根据 `is_deployable` 判定是否触发后续生成逻辑。
+## 3. 逻辑分发
+在 `DamagePipeline` 的 `_dispatch_broadcast` 阶段，系统会根据 `AOEShape` 的类型调用 `CombatSpace` 对应的检测算法。
 
 ---
 *状态: 现行规范*
