docs: 更新 Core 核心文档并重命名为中文

--- a/docs/系统设计详述.md
+++ b/docs/系统设计详述.md
@@ -30,7 +30,7 @@
 每个角色持有一个 `ActionManager`，负责维护角色的“忙碌”状态。
 *   **`ActionInstance`**: 代表一个具体的动作执行过程，记录已流逝帧数和待触发的判定帧（`hit_frames`）。
 *   **取消窗口 (Cancel Window)**: 允许在特定帧后通过切换动作来中断当前动作的后摇。
-*   **回调机制**: 动作执行完成后，通过 `runtime_skill_obj` 触发后续逻辑。
+*   **回调机制**: 动作执行完成后，通过 `origin_skill` 触发后续逻辑。
 
 ## 4. 元素附着理论 (Aura Theory V2)
 
