docs: 更新 V2 架构与踩坑记录文档 #30

--- a/docs/core/上下文环境.md
+++ b/docs/core/上下文环境.md
@@ -50,6 +50,11 @@ print(f"当前帧: {ctx.current_frame}")
     - 驱动 `space.update()` 完成全场景实体的物理更新。
 3. **清理 (`reset`)**: 移除所有实体、清空事件队列，释放资源。
 
+### 4.1 全场景快照 (`take_snapshot`)
+用于 UI 展示或持久化。
+- **功能**: 遍历 `CombatSpace` 中的所有实体，调用其 `export_state()` 方法。
+- **返回**: 包含当前帧数、全局状态及所有实体数据的纯字典。
+
 ---
 *版本: V2.2*
 *更新日期: 2026-02-07*
