--- a/docs/重构踩坑记录.md
+++ b/docs/重构踩坑记录.md
@@ -6,12 +6,17 @@
 
 ### 1.1 数据库初始化与配置冲突
 *   **现象**: 报错 `'NoneType' object has no attribute 'get'`，提示数据库连接池初始化失败。
-*   **原因**: `core.data.database` 在模块顶层通过 `Config.get()` 获取配置。由于 Python 的导入副作用，如果在 `Config()` 单例实例化之前导入了 `MySQLDataRepository`，会导致配置项尚未加载。
-*   **对策**: 在启动脚本或主入口中，务必遵循 **“先 Config，后业务导入”** 的原则：
+*   **原因**: `core.data.database` 在模块顶层通过 `Config.get()` 获取配置。由于 Python 的导入副作用，如果在 `Config()` 单例实例化之前导入了 `MySQLDataRepository`（或任何依赖它的 UI 页面），会导致配置项尚未加载。
+*   **对策**: 在 `main.py` 入口的最顶层（第一行业务导入之前）强制初始化 `Config`：
     ```python
     from core.config import Config
-    Config() # 必须最先执行
-    from core.data.repository import MySQLDataRepository # 之后再导入
+    Config() # 必须最先执行，早于任何 NiceGUI 页面导入
+    from core.logger import logger_init
+    logger_init()
+    
+    # 之后再导入其他模块
+    from nicegui import ui
+    from ui.pages import config as _config_page
     ```
 
 ### 1.2 动态扫描 (Registry) 失败
@@ -26,9 +31,9 @@
 *   **原因**: `Character` 基类的 `__init__` 预期的是数据库风格的 Key（如 `base_hp`, `base_atk`, `base_def`），而 Mock 数据或旧代码常使用中文 Key（如 `攻击力`）。
 *   **对策**: 统一使用 `base_xxx` 作为基础属性注入名。最终计算应始终通过 `AttributeCalculator` 提取。
 
-### 2.2 武器配置字段差异
-*   **现象**: `KeyError: 'name'`。
-*   **原因**: `TeamFactory` 在组装武器时预期 `weapon_data["name"]`，而部分配置或测试脚本错误传递了 `"id"` 或 `"refine"`（应为 `"refinement"`）。
+### 2.2 字段重命名与兼容性 (Scaling Stat)
+*   **现象**: 核心动作类（Damage, Shield）中的 `base_value` 命名歧义，易与“基础伤害区”混淆。
+*   **对策**: 将其重命名为 **`scaling_stat`**（属性收益类型）。为了保持对未迁移角色代码的兼容，在 `Damage` 类中通过 `@property` 实现了 `base_value` 的别名映射。
 
 ## 3. 核心驱动逻辑
 
@@ -53,11 +58,17 @@
     self.caster.event_engine.publish(GameEvent(EventType.BEFORE_DAMAGE, ...))
     ```
 
-### 4.2 构造函数签名不匹配
-*   **现象**: `TypeError: TheCatch.__init__() got an unexpected keyword argument 'base_data'`。
-*   **原因**: V2 的 `Weapon` 基类要求接收 `base_data`，但子类重写时未更新签名。
-*   **对策**: 批量更新所有已实现武器的 `__init__` 签名。
+## 5. UI 与持久化架构
+
+### 5.1 异步测试陷阱
+*   **现象**: `RuntimeError: There is no current event loop in thread 'MainThread'`。
+*   **原因**: `aiosqlite` 强依赖 `asyncio` 循环，而 `pytest-trio` 默认使用 `trio` 循环。两者不兼容。
+*   **对策**: 引入 `pytest-asyncio` 插件，并使用 `@pytest.mark.asyncio` 标记相关测试，确保测试环境与生产环境（NiceGUI 基于 asyncio）一致。
+
+### 5.2 本地模块命名冲突
+*   **现象**: `module 'ui' has no attribute 'run'`。
+*   **原因**: 项目根目录下存在 `ui/` 文件夹，`import ui.pages...` 导致本地包覆盖了 `nicegui.ui` 模块。
+*   **对策**: 在导入时使用别名 `from ui.pages import config as _config_page`，避免污染全局命名空间。
 
 ---
-*记录时间: 2026-02-07*
-*状态: 持续更新中*
+*最后更新: 2026-02-07*
