feat：完成第一阶段工作台，集成战术地图与行动控制台 #33

--- a/docs/ui/阶段一设计：战略筹备.md
+++ b/docs/ui/阶段一设计：战略筹备.md
@@ -1,70 +1,32 @@
-# 阶段一设计：战略筹备 (Strategy Phase)
+# 阶段一设计：战略筹备 (最终实现规范)
 
-## 1. 阶段概述
-阶段一的核心任务是初始化仿真环境。本阶段采用“配置中心化”的布局，将最复杂的实体参数录入置于视觉中心（中栏），同时在右侧提供物理空间的辅助配置。
+## 1. 交互架构：三栏式工作台 + 底部动作控制岛
+采用了 MD3 + Genshin Glass 风格的沉浸式布局，将配置流程高度解耦：
 
-## 2. 布局设计 (Workbench Layout)
+*   **左栏 (Entity Manager)**: 
+    *   **编队管理**: 动态添加角色占位符，支持悬浮删除。
+    *   **目标列表**: 受击目标（ENEMIES）的快速切换中心。
+*   **中栏 (Editor Pane)**: 
+    *   **角色/目标详情**: 负责等级、命座、武器、圣遗物及目标抗性的精细化数值录入。
+*   **右栏 (Tactical Radar)**: 
+    *   **可视化战术板**: 俯视视角展示角色（绿色）与敌人（红色）的物理位置。
+    *   **坐标系**: 中心点 (0,0)，映射游戏世界 ±10m 范围。
+*   **底部 (Action Console)**: 
+    *   **仿真主控**: 醒目的“开始仿真” Prominent Button。
+    *   **持久化控制**: 配置的保存/加载中心，集成系统状态监控。
 
-### 2.1 左栏：资源与环境 (Resources & Environment)
-*   **实体库**:
-    *   待选角色列表。
-    *   怪物类型列表。
-*   **预设环境 (Presets)**:
-    *   提供预设的战场环境配置（如：深境螺旋 Buff、特定副本机制、大世界天气）。
-    *   快速加载已保存的队伍/环境模板。
+## 2. 数据驱动与安全契约
+*   **配置中心化**: `PrototypeState` 维护与后端 `TeamFactory` 兼容的嵌套字典。
+*   **物理下沉**: `SimulationAssembler` 现已打通坐标传输，支持从 JSON 自动配置实体的初始物理坐标。
+*   **强类型约束**: 
+    *   武器选择列表根据角色 `Type` 自动过滤。
+    *   圣遗物套装使用带搜索的下拉选择（`ui.select`），并具备值合法性 Fallback。
 
-### 2.2 中栏：配置中枢 (The Config Hub) —— **核心区域**
-根据实体的选中状态，中栏在以下两种模式间切换：
-*   **全景模式 (Dashboard Mode - 无选中实体时)**:
-    *   展示全队 4 名角色的简报卡片。
-    *   包含：角色图标、元素属性、当前武器摘要、圣遗物套装摘要。
-*   **编辑模式 (Editor Mode - 选中特定实体时)**:
-    *   **基础**: 等级、命座、天赋。
-    *   **武器**: 搜索、选择、精炼。
-    *   **圣遗物**: 套装选择、主副词条原始数据录入。
-    *   **注意**: 严禁显示任何经过计算的最终面板。
-
-### 2.3 右栏：战场画布 (The Combat Canvas)
-*   **功能**: 负责实体的物理空间定义。
-*   **组件**: 一个俯视角的 2D 坐标网格。
-*   **交互**: 
-    *   用户在画布上点击或拖拽实体图标以修改其 `(X, Z)` 坐标。
-    *   通过实体图标上的方向柄旋转朝向（Rotation）。
-    *   实时预览受击判定半径（Hurtbox）。
-    *   画布与中栏联动：在画布上点击实体可将其设为“选中状态”，从而在中栏打开对应的编辑器。
-
-## 3. 功能按键设计 (Action Controls)
-
-### 3.1 顶层全局操作 (Top Header)
-*   **会话管理**: 
-    *   `[保存配置]`: 将当前草稿持久化为模板。
-    *   `[加载配置]`: 打开预设或历史配置库。
-*   **应用设置**: 全局 `[设置]` 按钮，调整仿真引擎步长、渲染偏好等。
-
-### 3.2 核心动作触发 (Bottom Control Bar)
-*   **开始仿真 (Primary Action)**: 
-    *   **位置**: 右下角常驻，醒目主色高亮。
-    *   **逻辑**: 仅在“编辑态”可见且校验通过（至少有 1 名角色）时激活。
-*   **重置 (Danger Zone)**: 
-    *   **位置**: 左下角。支持 `[清空队伍]` 或 `[重置环境]`。
-
-### 3.3 局部辅助操作 (Contextual Actions)
-*   **配置区 (中栏)**:
-    *   `[返回简报]`: 编辑模式下回到全队概览。
-    *   `[属性复制]`: 支持快速同步同类型实体的配置。
-*   **画布区 (右栏)**:
-    *   `[视口复位]`: 快速居中所有实体。
-    *   `[网格设置]`: 切换吸附精度或背景显隐。
-
-## 4. 交互逻辑 (Interaction Flow)
-1. **实体添加**: 用户从左栏拖拽或点击添加角色/怪物，实体自动出现在右栏画布中。
-2. **状态切换**:
-    *   **选中**: 点击右栏画布中的实体或左栏的已添加列表。中栏立即切换为该实体的深度编辑器。
-    *   **取消选中**: 点击画布空白处。中栏回归全队简报视图。
-3. **参数配置**: 在中栏完成所有静态属性录入。
-4. **空间配置**: 在右栏完成物理位置排布。
-5. **执行任务**: 点击右下角“开始仿真”，进入仿真锁定状态，完成后自动跳转阶段三。
+## 3. 核心技术解决
+*   **交互稳定性**: 圣遗物副词条编辑器采用局部渲染，解决了 NiceGUI 弹窗焦点丢失问题。
+*   **抗递归设计**: 分离静态容器与动态网格，彻底解决了搜索/过滤时的 `RecursionError`。
+*   **物理映射**: 实现了 UI 像素百分比与游戏米级坐标系的线性映射。
 
 ---
-*版本: v1.1.0*
-*日期: 2026-02-08*
+*状态: 阶段一完工 (Phase 1 Completed)*
+*更新日期: 2026-02-08*
