docs: 更新阶段二战术编排设计文档与架构概览 #34

--- a/docs/ui/阶段二设计：战术编排.md
+++ b/docs/ui/阶段二设计：战术编排.md
@@ -1,43 +1,38 @@
-# 阶段二设计：战术编排 (Tactics Phase)
+# 阶段二设计：战术编排 (Tactics Phase) - [已实现]
 
 ## 1. 阶段概述
 阶段二的核心任务是定义实体的行为意图序列。本阶段采用“流式布局”以处理大规模动作序列，并将右栏定义为动作的深度参数编辑器。UI 保持纯净的采集职能，不预测位移，不校验逻辑。
 
-## 2. 布局设计 (Workbench Layout)
+## 2. 布局实现 (Final Implementation)
 
 ### 2.1 左栏：动作库 (Action Library)
-*   **核心功能**: 
-    *   根据当前队伍成员，列出所有可用的原始动作指令。
-    *   **动作模板 (Snippets)**: 支持快速插入预设的连招组合。
+*   **实现**: 动态遍历当前队伍成员，为每个角色提供 [A/E/Q/S] (普攻/战技/爆发/切人) 快捷按钮。
+*   **交互**: 点击按钮立即向全局 `actions` 序列追加指令。
 
 ### 2.2 中栏：动作序列流 (The Action Flow) —— **核心区域**
-*   **设计形态**: **流式瓷砖 (Flow Tiles)**。
-    *   动作以小型化卡片形式展示，采用类似文本换行的布局模式，从左至右、自上而下排列。
-    *   *优势*: 极大提升单屏动作承载量，适合长达 60s+ 的复杂循环编排。
-*   **视觉元素**: 
-    *   [角色图标] + [动作名称]。
-    *   底色根据执行角色的元素属性动态显示。
+*   **视觉形态**: **流式瓷砖 (Flow Tiles)**。
+    *   采用 `flex-wrap` 布局，动作块以玻璃质感卡片展示。
+    *   **动态主题**: 背景侧条根据角色元素属性自动配色。
 *   **交互规范**:
-    *   **自由排序**: 选定块后可直接拖拽至序列中任意位置。
-    *   **选中联动**: 点击特定动作块，右栏立即载入该块的详细参数。
+    *   **选中高亮**: 点击动作块切换主色调边框，并同步刷新右栏。
+    *   **智能删除**: 删除中间动作时，后续索引自动平移，维持 `selected_action_idx` 指向正确。
 
 ### 2.3 右栏：动作参数编辑器 (Action Inspector)
-*   **功能**: 取代物理画布，专注于单个动作的深度定制。
+*   **功能**: 提供单个动作的深度定制。
 *   **编辑项**:
-    *   **子类型定义**: 如点按/长按切换、多段攻击的具体段落选择。
-    *   **静态位移输入**: 若动作包含位移，用户手动录入预期的位移向量或目标点坐标。
-    *   **条件备注**: 用于用户标记该动作的意图。
+    *   **备注/意图**: 记录编排逻辑。
+    *   **位移矢量**: 静态录入预期位移偏移量 (ΔX, ΔZ)。
 
-## 3. 核心交互流程
-1. 用户在左栏点击动作，动作以“瓷砖块”形式添加到中栏末尾。
-2. 用户在中栏通过拖拽优化整体执行顺序。
-3. 用户点击中栏中的某个动作块，在右栏进行参数微调。
-4. 编排完成后，点击右下角“开始仿真”。
+## 3. 技术架构：状态与视图分离
+为了应对复杂的交互，阶段二采用了模块化重构：
+*   **`prototype_state.py`**: 纯逻辑层，持有 `PrototypeState` 类，负责数据序列化与仿真触发。
+*   **`prototype_parts.py`**: 组件层，封装了圣遗物、角色编辑器等大型渲染块。
+*   **`prototype.py`**: 路由与外壳，负责阶段分发逻辑。
 
-## 4. 设计逻辑：纯净采集
-*   **去物理化**: 阶段二不展示任何 CombatSpace 的位置预测。
-*   **去逻辑化**: 允许排布任意顺序的动作，后果（如技能放不出、能量不足）统一在阶段三展示。
+## 4. 导出契约
+动作流导出为标准的 `sequence_config` JSON 列表，格式为：
+`[{"character_name": "...", "action_key": "...", "params": {...}}, ...]`
 
 ---
-*版本: v1.1.0*
-*日期: 2026-02-08*
+*版本: v1.2.0*
+*日期: 2026-02-09*
