--- a/docs/架构概览.md
+++ b/docs/架构概览.md
@@ -23,7 +23,20 @@
 *   **`ReactionSystem`**: 元素反应中枢。监听附着事件，根据附着论执行消耗、叠层与反应触发。
 *   **`Energy/Shield/Health Systems`**: 处理能量循环、护盾逻辑与生命值变动。
 
-## 3. 核心执行流
+## 3. 业务表现层 (GUI - NiceGUI)
+
+项目采用 **"MD3 Panes"** 面板化架构，并实施了 **“状态-视图分离 (State-View Separation)”** 模式以管理复杂的交互状态。
+
+### 3.1 渲染模式
+*   **多阶段状态机**: 页面通过 `state.phase` (Strategic/Tactical/Review) 进行顶层路由分发。
+*   **局部刷新**: 结合 `@ui.refreshable` 与回调函数，实现细粒度的 UI 更新，避免全局重绘导致的闪烁。
+
+### 3.2 文件组织规范 (V2.2+)
+*   **`xxx_state.py`**: 持久化状态管理。包含数据导出、文件 I/O 与业务逻辑计算。
+*   **`xxx_parts.py`**: 可复用大型组件库。封装复杂的渲染逻辑（如属性编辑器、动作磁贴）。
+*   **`xxx.py`**: 页面路由入口。定义外壳布局并执行组件分发。
+
+## 4. 核心执行流
 1.  **环境装配**: `create_context()` 初始化上下文并挂载所有子系统。
 2.  **实体加载**: `TeamFactory` 解析配置，生成角色与目标并注册到 `CombatSpace`。
 3.  **主循环 (Tick)**: 
@@ -37,3 +50,7 @@
 ## 4. 扩展规范
 *   **模块化角色**: 每个角色拥有独立的目录，将逻辑拆分为属性、技能、实体与效果，确保代码高度可维护性。
 *   **契约化攻击**: 通过 `AttackConfig` 和 `HitboxConfig` 定义攻击，实现数值与物理表现的解耦。
+
+---
+*版本: v2.1.0*
+*日期: 2026-02-08*
