docs: 更新动作状态机和技能系统文档，增强意图解析与数据契约描述

--- a/docs/core/技能系统.md
+++ b/docs/core/技能系统.md
@@ -1,31 +1,32 @@
 # Core - 技能系统 (Skill System)
 
-技能系统是连接 `Character` 实体与 `ActionManager` (ASM) 引擎的桥梁，负责定义战斗逻辑的回调与数值规则。
+技能系统是连接 `Character` 实体与 `ActionManager` (ASM) 引擎的桥梁，负责定义战斗逻辑的回调、数值规则以及**动作生成**。
 
-## 1. 核心设计
-在 V2 架构中，技能对象不再持有计时器或状态，而是作为 **“动作生成器”** 存在。
+## 1. 核心设计：技能即动作生成器
+在 V2 架构中，技能对象不再持有计时器或状态，而是作为 **“动作生成器 (Action Producer)”** 存在。角色通过技能来调用动作，每一个技能都与其对应的物理动作块紧密绑定。
 
-### 1.1 SkillBase (技能基类)
-所有技能（普攻、战技、爆发）的祖先。
-- **`to_action_data(params)`**: 核心接口。根据传入参数（如“长按”）生成 `ActionFrameData` 并绑定 `origin_skill`。
-- **`on_execute_hit(target, index)`**: 命中回调。当 ASM 运行到判定点时被调用，此处负责实例化 `Damage` 对象并发布 `BEFORE_DAMAGE` 事件。
-- **`on_frame_update()`**: 每帧回调。用于处理位移、召唤实体（如锅巴）或持续判定。
+### 1.1 核心契约：意图解析
+技能不接收物理坐标参数，而是接收 **“执行意图 (Intent)”**。
+- **`to_action_data(intent: Dict[str, Any])`**: 核心接口。
+    - **逻辑**: 技能根据意图字典（如 `{"type": "Hold", "stack": 2}`）从其绑定的动作库中检索或构造对应的 `ActionFrameData`。
+    - **物理属性**: 生成的 `ActionFrameData` 已经固化了该动作应有的位移 (`horizontal_dist`)、判定帧和时长。
+- **`on_execute_hit(target, index)`**: 命中回调。由 ASM 引擎在到达判定帧时触发。此处负责实例化 `Damage` 对象并发布 `BEFORE_DAMAGE` 事件。
+- **`on_frame_update()`**: 每帧回调。用于处理技能生命周期内的特殊逻辑，如召唤实体的位移同步。
 
-## 2. 技能分类
-- **`NormalAttackSkill`**: 封装了多段普攻的序列生成逻辑。
-- **`EnergySkill`**: 具备能量判定的大招基类。
-- **`GenericSkill`**: [Deprecated] 建议直接继承 `SkillBase` 以获得更强的逻辑控制能力。
+## 2. 技能与动作的绑定
+这种绑定确保了物理表现的唯一性与准确性。UI 层只需要传达“做什么”，而“怎么做”以及“位移多少”由技能及其绑定的动作数据决定。
 
-## 3. 实现示例 (V2 规范)
+## 3. 实现规范
 ```python
 class MySkill(SkillBase):
-    def to_action_data(self, params=None) -> ActionFrameData:
-        data = ActionFrameData(name="MY_SKILL", total_frames=60, hit_frames=[30])
-        data.origin_skill = self # 必须绑定以接收回调
-        return data
+    def to_action_data(self, intent=None) -> ActionFrameData:
+        # 根据意图决定产出哪种动作块
+        if intent and intent.get("type") == "Hold":
+            return self.action_assets["HOLD_BLOCK"] 
+        return self.action_assets["PRESS_BLOCK"]
 
     def on_execute_hit(self, target, hit_index):
-        # 构造伤害并发布事件 (DamageSystem 会接管后续计算)
+        # 具体的伤害结算逻辑
         dmg = Damage(100.0, (Element.PYRO, 1.0), DamageType.SKILL, "我的伤害")
         self.caster.event_engine.publish(GameEvent(EventType.BEFORE_DAMAGE, ...))
 ```
@@ -34,5 +35,5 @@ class MySkill(SkillBase):
 角色子类通过在 `_setup_character_components` 中实例化技能并存入 `self.skills` 字典来完成绑定。
 
 ---
-*版本: V2.2*
-*更新日期: 2026-02-07*
+*版本: V2.3 (Action Binding)*
+*更新日期: 2026-02-09*
