--- a/docs/数据传输架构.md
+++ b/docs/数据传输架构.md
@@ -79,30 +79,43 @@ graph TD
 ### 3.2 `sequence_config` (动作序列)
 描述仿真过程中的动态指令。
 *   结构：`List[Dict]`
-*   字段：`character_name` (或 ID), `action_key` (对应 ACTION_NAME_MAP), `params` (参数字典), `timestamp` (可选)。
+*   字段：
+    *   **`character_name`**: 执行者名称。
+    *   **`action_key`**: 意图动作（对应 `ACTION_NAME_MAP`，如 "skill", "burst"）。
+    *   **`params`**: 意图字典。包含用户在 UI 选择的非物理逻辑参数（如点按/长按、段落选择、备注）。
+    *   **`timestamp`**: (可选) 动作发生的时间戳。
 
-## 4. 关键重构任务 (Refactor Roadmap)
+## 4. 数据契约演进 (The Command Flow)
 
-### 4.1 TeamFactory 升级
-*   **解耦映射**: 支持通过 `name` 自动补全 `id` 或直接通过 UI 传入的 `id` 进行装配。
-*   **结构适配**: 调整 `_build_character` 方法，递归解析嵌套的 `weapon` 和 `artifacts` 对象。
-*   **容错处理**: 增加对缺失资源（如未实现的类）的优雅回退。
+为了消除 Parser 与 Skill 之间的断层，系统采用“无损意图传输”架构：
 
-### 4.2 空间注入逻辑
-*   **物理落位**: `CombatSpace` 必须接收 `(X, Z, Rotation)` 参数。
-*   **实体注册**: 实体实例在创建后，需立即调用 `ctx.space.add_entity()` 注册到对应的 Faction 列表中。
+1.  **UI 意图捕获**: UI 不再尝试计算位移或解析物理帧，而是产出包含原始 `params` 的 JSON 配置。
+2.  **ActionParser 验证**: 解析器负责验证 JSON 结构并将数据转换为 `ActionCommand` 对象，**禁止**在此层对 `params` 进行业务降维或丢弃。
+3.  **Simulator 调度**: 模拟器将 `ActionCommand` 发送给目标角色的 `ActionManager`。
+4.  **Skill 意图解析**: 角色根据 `ActionCommand.action_key` 找到对应技能，调用 `skill.to_action_data(intent)`。技能根据意图字典，检索并产出绑定的 `ActionFrameData`（包含固有的物理位移与时序），最终注入状态机。
 
-### 4.3 UI 导出转换器 (UI-to-Sim Converter)
-*   在 `PrototypeState` 中实现 `export_for_simulation()` 方法。
-*   **主要职责**:
-    *   将 `talents` 列表 `[10, 10, 10]` 拼接为 `"10/10/10"`。
-    *   将圣遗物 Slot 字典展平。
-    *   确保所有数值类型（如等级、精炼）均为后端要求的 `int` 类型。
+### 4.1 关键重构任务 (Refactor Roadmap)
+
+*   **TeamFactory 升级**:
+    *   **解耦映射**: 支持通过 `name` 自动补全 `id` 或直接通过 UI 传入的 `id` 进行装配。
+    *   **结构适配**: 调整 `_build_character` 方法，递归解析嵌套的 `weapon` 和 `artifacts` 对象。
+    *   **容错处理**: 增加对缺失资源（如未实现的类）的优雅回退。
+
+*   **空间注入逻辑**:
+    *   **物理落位**: `CombatSpace` 必须接收 `(X, Z, Rotation)` 参数。
+    *   **实体注册**: 实体实例在创建后，需立即调用 `ctx.space.add_entity()` 注册到对应的 Faction 列表中。
+
+*   **UI 导出转换器 (UI-to-Sim Converter)**:
+    *   在 `PrototypeState` 中实现 `export_for_simulation()` 方法。
+    *   **主要职责**:
+        *   将 `talents` 列表 `[10, 10, 10]` 拼接为 `"10/10/10"`。
+        *   将圣遗物 Slot 字典展平。
+        *   确保所有数值类型（如等级、精炼）均为后端要求的 `int` 类型。
 
 ## 5. 异常处理协议
 *   **校验失败**: 若 UI 录入的角色 ID 在 `CharacterClassMap` 中无对应类，阻止仿真启动并返回错误。
 *   **版本不一致**: 若 JSON 结构与 Factory 版本不匹配，提示“配置模板已过期”。
 
 ---
-*状态: 草案 v1.0*
-*日期: 2026-02-08*
+*状态: V1.1 (ActionCommand Protocol)*
+*日期: 2026-02-09*
