docs: 更新V2.3意图驱动架构相关文档，确立元数据发现机制与ActionCommand协议 #35

--- a/docs/architecture/角色子类适配指南.md
+++ b/docs/architecture/角色子类适配指南.md
@@ -1,72 +1,118 @@
-# 架构设计：角色子类适配指南 (新架构 V2)
+# 架构设计：角色子类适配指南 (V2.3 - 意图驱动版)
 
 ## 1. 概述
-本指南确立了具体的角色子类（如香菱、夜兰等）在新版场景引擎下的模块化重构规范。
+本指南确立了角色子类在 V2.3 场景仿真引擎下的模块化重构规范。核心演进在于从“过程式调用”转向“意图驱动 (Intent-Driven)”，并引入“元数据发现”机制以支持 UI 动态生成。
+
+---
 
 ## 2. 目录结构规范 (Modular Structure)
-必须采用以下文件布局以确保逻辑解耦：
+必须采用以下文件布局以实现逻辑解耦与 Registry 自动扫描：
 
 ```text
-character/REGION/xiangling/
+character/REGION/char_name/
 ├── __init__.py    # 导出核心角色类
 ├── char.py        # 核心组装类 (继承 Character)
-├── entities.py    # 战场物理实体 (锅巴、旋火轮、岩柱)
-├── effects.py     # 角色特有逻辑效果 (Buff、印记、状态)
+├── entities.py    # 战场物理实体 (召唤物、部署物)
+├── effects.py     # 角色特有效果 (Buff、印记)
 ├── skills.py      # 技能逻辑 (Normal, Skill, Burst)
-└── talents.py     # 固有天赋与命座定义
+└── talents.py     # 天赋与命座定义
 ```
 
-## 3. 复杂技能触发规范 (Parameterized Skills) [NEW]
-为了支持“长按 (Hold)”、“多段 (Multi-stage)”等复杂触发逻辑，系统采用 **“参数化路由”** 模式。
+---
 
-### 3.1 逻辑流转
-1. **角色接口层**：调用 `char.elemental_skill("长按")`。
-2. **基类透传层**：`Character._get_action_data` 接收该参数。
-3. **技能工厂层**：调用技能对象的 `to_action_data(params="长按")`。
-4. **动作生成层**：技能对象根据参数返回具有不同帧数和判定点的 `ActionFrameData`。
+## 3. 核心重构契约 (Initialization Hooks)
 
-### 3.2 技能实现示例 (`skills.py`)
-```python
-class ElementalSkill(SkillBase):
-    def to_action_data(self, params: Any = None) -> ActionFrameData:
-        if params == "长按":
-            data = ActionFrameData(name="E_HOLD", total_frames=132, hit_frames=[111])
-        else:
-            data = ActionFrameData(name="E_PRESS", total_frames=42, hit_frames=[31])
-        
-        # 必须挂载运行时对象以维持回调
-        setattr(data, "runtime_skill_obj", self)
-        return data
-```
+### 3.1 弃用旧方法
+**禁止** 使用 `_init_character()`。必须使用以下拆分后的钩子函数：
 
-## 4. 核心重构契约 (Hooks)
-
-### 4.1 `_setup_character_components()`
+### 3.2 `_setup_character_components()`
 **职责**：实例化技能对象与能量系统。
 ```python
 def _setup_character_components(self):
-    self.elemental_energy = ElementalEnergy(self, ('火', 80))
+    self.elemental_energy = ElementalEnergy(self, ('冰', 80))
     self.skills = {
-        "normal": NormalAttack(self.skill_params[0]),
-        "skill": ElementalSkill(self.skill_params[1]),
-        "burst": ElementalBurst(self.skill_params[2], self)
+        "normal_attack": NormalAttack(self.skill_params[0]),
+        "elemental_skill": ElementalSkill(self.skill_params[1]),
+        "elemental_burst": ElementalBurst(self.skill_params[2])
     }
 ```
 
-### 4.2 `_setup_effects()`
-**职责**：填充天赋与命座槽位。
+### 3.3 `_setup_effects()`
+**职责**：填充天赋与命座列表。
 ```python
 def _setup_effects(self):
     self.talents = [Talent1(), Talent2()]
     self.constellations = [C1(), C2(), C3(), C4(), C5(), C6()]
 ```
 
-## 5. 关键接口规范
-- **方法命名**：统一使用 **`on_frame_update()`** 作为帧驱动接口。
-- **属性访问**：统一通过 **`self.skills["key"]`** 访问技能组件。
-- **实体注册**：所有生成的 Entity 必须通过 **`ctx.space.register(entity)`** 进入场景。
+---
+
+## 4. 意图驱动与动作生成 (Intent-Driven)
+
+### 4.1 无损意图传输
+UI 产生的参数（如“长按”、“一段蓄力”）作为 `intent` 字典透传至技能层。
+
+### 4.2 技能工厂化 (`skills.py`)
+技能类必须实现 `to_action_data(intent)` 接口：
+```python
+class ElementalSkill(SkillBase):
+    def to_action_data(self, intent: dict = None) -> ActionFrameData:
+        intent = intent or {}
+        # 1. 解析意图 (逻辑参数)
+        is_hold = intent.get("type") == "Hold"
+        
+        # 2. 生成绑定的物理动作块
+        # 物理参数（位移、帧数）在此时固化，UI 不参与计算
+        if is_hold:
+            return ActionFrameData(name="E_HOLD", total_frames=120, horizontal_dist=2.5)
+        return ActionFrameData(name="E_PRESS", total_frames=40, horizontal_dist=0.0)
+```
 
 ---
-*状态: 现行规范 V2.2*
-*Author: Gemini CLI Agent*
-*Date: 2026-02-07*
+
+## 5. 元数据发现机制 (Metadata Discovery)
+
+为了让 UI 能够动态生成参数编辑器，角色类必须实现 `get_action_metadata()`：
+
+```python
+def get_action_metadata(self) -> Dict[str, Any]:
+    return {
+        "elemental_skill": {
+            "label": "技能显示名称",
+            "params": [
+                {
+                    "key": "type", 
+                    "label": "施放方式", 
+                    "type": "select", 
+                    "options": [
+                        {"label": "点按", "value": "Press"}, 
+                        {"label": "长按", "value": "Hold"}
+                    ], 
+                    "default": "Press"
+                }
+            ]
+        }
+    }
+```
+
+---
+
+## 6. 注册规范 (Registry)
+统一使用 **角色名称字符串** 进行注册，严禁使用 ID 注册。
+```python
+@register_character("夏洛蒂")
+class CHARLOTTE(Fontaine):
+    ...
+```
+
+---
+
+## 7. 关键原则总结
+1.  **动作绑定**：动作与技能是绑定的，技能是动作的生产者。
+2.  **去物理化**：UI 仅传输逻辑意图（Intent），不传输物理参数（如坐标、位移）。
+3.  **内敛位移**：动作自带的位移 (`horizontal_dist`) 由 ASM 引擎自动在动画周期内平摊执行。
+4.  **Schema 驱动**：UI 通过 Metadata 探测参数需求，实现 Inspector 的动态渲染。
+
+---
+*版本: V2.3 (Discovery & Intent)*
+*日期: 2026-02-09*
