--- a/docs/core/技能系统.md
+++ b/docs/core/技能系统.md
@@ -13,6 +13,23 @@
 - **`on_execute_hit(target, index)`**: 命中回调。由 ASM 引擎在到达判定帧时触发。此处负责实例化 `Damage` 对象并发布 `BEFORE_DAMAGE` 事件。
 - **`on_frame_update()`**: 每帧回调。用于处理技能生命周期内的特殊逻辑，如召唤实体的位移同步。
 
+### 1.2 元数据发现 (Metadata Discovery)
+为了让 UI 能够动态生成参数编辑器，角色与技能系统必须暴露其参数模式。
+- **`get_action_metadata()`**: 
+    - **职责**: 返回该角色支持的动作及其对应的参数 Schema。
+    - **Schema 结构**:
+        ```python
+        {
+            "action_key": {
+                "label": "显示名称",
+                "params": [
+                    {"key": "type", "label": "施放方式", "type": "select", "options": ["点按", "长按"]},
+                    {"key": "index", "label": "段落", "type": "int", "min": 1, "max": 5}
+                ]
+            }
+        }
+        ```
+
 ## 2. 技能与动作的绑定
 这种绑定确保了物理表现的唯一性与准确性。UI 层只需要传达“做什么”，而“怎么做”以及“位移多少”由技能及其绑定的动作数据决定。
 
