--- a/docs/数据传输架构.md
+++ b/docs/数据传输架构.md
@@ -4,8 +4,9 @@
 打通“前端 UI 配置”与“后端仿真引擎”之间的数据断层，确保全生命周期（配置-编排-仿真）的数据一致性与可追溯性。
 
 ## 2. 数据流向 (Data Flow)
-1.  **配置阶段 (UI)**: 用户在 NiceGUI 界面通过 `PrototypeState` 录入原始参数。
-2.  **持久化阶段 (File I/O)**: 
+1.  **探测阶段 (Discovery)**: UI 调用实体的 `get_action_metadata()` 获取参数 Schema。
+2.  **配置阶段 (UI)**: 用户根据 Schema 录入意图参数（如选择“长按”），存储于 `PrototypeState`。
+3.  **持久化阶段 (File I/O)**: 
     *   **保存**: 将 `PrototypeState` 序列化为 `.json` 模板文件。
     *   **加载**: 从 `.json` 文件恢复状态至 `PrototypeState`，或直接跳过 UI 供后端调用。
 3.  **导出阶段 (Serializing)**: UI 或加载器产出标准 JSON 契约。
@@ -16,37 +17,37 @@
 
 ```mermaid
 graph TD
+    subgraph Discovery [探测层 - Schema Discovery]
+        D1[Backend: Character/Skill] -- "get_action_metadata()" --> D2[UI: Dynamic Inspector]
+    end
+
     subgraph Frontend [前端配置层 - NiceGUI]
-        A[用户交互界面] --> B[PrototypeState /响应式状态/]
+        A[用户交互界面] -- "根据 Schema 录入" --> B[PrototypeState /意图参数/]
         B -- "export_config()" --> C[SimulationConfig /JSON Bundle/]
     end
 
     subgraph Storage [持久化层 - File I/O]
         C -- "Save to File" --> S[(JSON 模板库)]
         S -- "Load to State" --> B
-        S -- "Headless Input" --> D
+        S -- "Headless Input" --> C
     end
 
-    subgraph Assembly [后端组装层 - Factories]
-        C --> D[TeamFactory]
-        C --> E[ActionParser]
-        D <--> F[(DataRepository /数据库/)]
-        
-        D -- "实例组装" --> G[角色/武器/圣遗物对象]
-        E -- "指令解析" --> H[动作指令元组列表]
+    subgraph Assembly [后端解析层 - Parser]
+        C -- "sequence_config" --> E[ActionParser]
+        E -- "结构验证" --> H[ActionCommand /意图指令/]
     end
 
-    subgraph Core [引擎执行层 - Core Engine]
-        G -- "space.add_entity()" --> I[SimulationContext /CombatSpace/]
-        H -- "挂载序列" --> J[Simulator]
-        I -- "注入上下文" --> J
-        J -- "驱动帧循环" --> K[仿真结果/快照流]
+    subgraph Core [引擎驱动层 - Core Engine]
+        H -- "Simulator 调度" --> I[ActionManager]
+        I -- "Resolve Intent" --> J[Skill: to_action_data]
+        J -- "产出物理块" --> K[ActionFrameData /判定帧/位移/]
+        K -- "驱动帧循环" --> L[仿真结果/状态流]
     end
 
-    style S fill:#fff,stroke:#333,stroke-dasharray: 5 5
+    D2 -.-> A
     style C fill:#f96,stroke:#333,stroke-width:2px
-    style G fill:#bbf,stroke:#333,stroke-width:2px
-    style I fill:#dfd,stroke:#333,stroke-width:2px
+    style H fill:#bbf,stroke:#333,stroke-width:2px
+    style K fill:#dfd,stroke:#333,stroke-width:2px
 ```
 
 ## 3. 文件 I/O 与持久化 (Persistence)
