refactor: 将动作元数据发现重构为类方法，并统一 UI 选项格式以增强稳定性 #35

--- a/docs/architecture/角色子类适配指南.md
+++ b/docs/architecture/角色子类适配指南.md
@@ -72,10 +72,11 @@ class ElementalSkill(SkillBase):
 
 ## 5. 元数据发现机制 (Metadata Discovery)
 
-为了让 UI 能够动态生成参数编辑器，角色类必须实现 `get_action_metadata()`：
+为了让 UI 能够动态生成参数编辑器，角色类必须实现 **类方法** `get_action_metadata()`。使用类方法是为了确保 UI 在不实例化角色对象（避免触发模拟上下文依赖）的情况下即可感知参数 Schema。
 
 ```python
-def get_action_metadata(self) -> Dict[str, Any]:
+@classmethod
+def get_action_metadata(cls) -> Dict[str, Any]:
     return {
         "elemental_skill": {
             "label": "技能显示名称",
@@ -84,10 +85,8 @@ def get_action_metadata(self) -> Dict[str, Any]:
                     "key": "type", 
                     "label": "施放方式", 
                     "type": "select", 
-                    "options": [
-                        {"label": "点按", "value": "Press"}, 
-                        {"label": "长按", "value": "Hold"}
-                    ], 
+                    # options 必须为字典格式: {内部值: 显示标签}
+                    "options": {"Press": "点按", "Hold": "长按"}, 
                     "default": "Press"
                 }
             ]
