docs: 更新批量处理与日志系统架构文档，对齐 V2.3 实际实现 #36

--- a/docs/architecture/system/批量处理架构.md
+++ b/docs/architecture/system/批量处理架构.md
@@ -60,6 +60,24 @@
 *   **数据库连接**: `MySQLDataRepository` 必须在 Worker 内部实例化（即每个进程一个连接），严禁跨进程传递连接对象。
 *   **日志静默**: 批量模式下，Worker 默认关闭控制台日志，仅在发生未捕获异常时向 stderr 输出。
 
+## 5. 隔离性与持久化设计 (Isolation & Persistence)
+
+### 5.1 进程级别隔离
+*   **无共享状态**: 每个 Worker 拥有独立的 Python 进程空间。
+*   **按需初始化**: 在 Worker 函数内部显式调用 `initialize_registry()` 和 `logger_init()`，确保子进程环境干净。
+*   **数据库**: `MySQLDataRepository` 在 Worker 内部实例化，避免连接池跨进程失效。
+
+### 5.2 结构化日志持久化
+为了兼顾性能与可调试性，批量模式采取 **“日志文件隔离”** 策略：
+*   **目录结构**: 每次任务创建子文件夹 `data/log/Batch/batch_YYYYMMDD_HHMMSS/`。
+*   **文件名**: 每个仿真样本对应一个 `run_{index}.log` 文件。
+*   **异常捕获**: 子进程中的 `Simulator` 会捕获所有未处理异常，并利用其专属 Logger 将完整的 Traceback 写入对应的日志文件。
+
+## 6. UI 交互流 (UX Flow)
+
+1.  **单次模式 (Single)**: 默认执行。记录详细的 SQLite 快照 (`last_simulation.db`)，主要用于战后详细回溯。
+2.  **批量模式 (Batch)**: 通过 UI 侧边栏切换。采用蒙特卡洛/参数扫描模式运行。仅记录轻量级 Summary，通过 Footer 状态栏反馈任务进度 (Completed/Total)。
+
 ---
-*版本: V2.3 (Batch Architecture)*
+*版本: V2.3 (Stable Implementation)*
 *日期: 2026-02-09*
