--- a/docs/architecture/system/日志系统架构.md
+++ b/docs/architecture/system/日志系统架构.md
@@ -85,6 +85,31 @@ async def run_simulation(self):
     ...
 ```
 
+## 2. 核心组件
+
+### 2.1 `LogEvent` (数据载体)
+日志不仅是文本，而是携带元数据的结构化对象：
+*   **Sender**: 标识发送方 (如 `Damage`, `ASM`, `Physics`, `ICD`)。
+*   **Payload**: 包含业务数据 (如 `damage_value`, `is_crit`, `element`)。
+*   **Frame**: 强制携带当前仿真帧。
+
+### 2.2 `SimulationLogger` (生产者)
+*   **智能标签剥离**: `log_info("[TagName] Msg")` 自动提取 `TagName` 为 `Sender`。
+*   **业务方法**: `log_damage`, `log_reaction`, `log_shield` 均已适配 V2.3 结构化协议。
+
 ---
-*版本: V2.1 (Structured Logging)*
+
+## 3. 日志分级与发送者规范
+
+| 发送者 (Sender) | 对应级别 | 描述 |
+| :--- | :--- | :--- |
+| `Simulator` | INFO | 仿真起止、调度信息 |
+| `ASM` | INFO | 动作开始、结束、取消状态 |
+| `Physics` | INFO | 实体注册、AOE 命中统计 |
+| `Damage` | DAMAGE | 伤害结算详细 Payload |
+| `ICD` | DEBUG | 附着判定与计时器重置 |
+| `Heal`/`Energy` | HEAL/ENERGY | 治疗与回能反馈 |
+
+---
+*版本: V2.3 (Structured & Multi-process)*
 *日期: 2026-02-09*
